
Version 1.23  2009-10-31
 * remove unuseless variable "sleep_secs" in tracker_report_thread_entrance
 * storage can bind an address when connect to other servers (as a client)
 * common/md5.h fix UINT4 typedef wrong type in 64 bit OS
 * client/fdfs_test.c: print the source ip address decoded from the remote 
   filename
 * client add function fdfs_get_file_info

Version 1.22  2009-10-12
 * bug fixed: common/shared_func.c allow_hosts array maybe overflow in some case
 * tracker/tracker_mem.c: protocol TRACKER_PROTO_CMD_SERVICE_QUERY_FETCH_ALL, 
   return at least a storage server when active storage 
   server count of the group > 0
 * bug fixed: when client connection disconnected, always log debug or error info
 * make.sh: default not install FastDFS services in Linux server
 * common/sockopt.c: setsockopt level SOL_TCP only supported in Linux
 * common/http_func.c: do not use function strsep because strsep is not portable
 * client upload file support callback function
 * client support multi tracker groups (multi FastDFS clusters)
 * bug fixed: thread_stack_size not correct when the param thread_stack_size 
   not set in the config file
 * supply php extension (directory name: php_client)
 * c client reconnect server (tracker or storage) when network IO error
 * c client: make tracker server index counter thread safely

Version 1.21  2009-09-19
 * bug fixed: when source storage server synced file to new storage server done,
   it's status changed to ONLINE (should keep as ACTIVE, report by zhouzezhong)
 * add thread_stack_size in config file, default value is 1MB (report by chhxo)
 * tracker and storage server use setsockopt to keep alive 
   (report by zhouzezhong)
 * bug fixed: storage server with multi-path, upload file fail when the free 
   space of each path <= reserved space (the total free space > reserved space,
   report by zhouzezhong)
 * storage_sync.c: when connect fail, do not change the dest storage server '
   status to offline